Login(JWT),Logout,Register User

--- a/Intro_API_Web/appsettings.json
+++ b/Intro_API_Web/appsettings.json
@@ -7,7 +7,12 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Test_API ; integrate security=true"
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Test_API ;"
+  },
+  "Jwt": {
+    "Issuer": "Intro_API_Web",
+    "Key": "xinchaonetcore",
+    "lifetime": 15
   },
   "AllowedHosts": "*"
 }
