Commit Forget Password

--- a/Intro_API_Web/appsettings.json
+++ b/Intro_API_Web/appsettings.json
@@ -11,7 +11,7 @@
   },
   "Jwt": {
     "Issuer": "Intro_API_Web",
-    "Key": "xinchaonetcore",
+    "Key": "xin chao cac ban day la .net core",
     "lifetime": 15
   },
   "AllowedHosts": "*"
